5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1723_2507.log
== TEST (2019-05-14 11:49:15) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qv
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qi<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    qp=qp+(qp*(pc/100))-qv
NameError: name 'qv' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:49:44) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qi<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    if(qi<=0):
NameError: name 'qi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:49:58) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:50:09) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- EXECUTION TIME:
0.184679
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:50:17) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- EXECUTION TIME:
0.129636
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:50:58) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- EXECUTION TIME:
0.137255
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:50:58) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:51:00) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- EXECUTION TIME:
0.241711
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:51:00) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:51:00) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:51:01) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- EXECUTION TIME:
0.130583
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 16, in <module>
    qr = int(input("escreva: "))
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:51:01) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- EXECUTION TIME:
0.141867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2507/main.py", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:51:07) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	if(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 16, in <module>
    qr = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:51:39) 
-- CODE:
qp = int(input("escreva: "))
pc = int(input("escreva: "))
qr = int(input("escreva: "))

mes=0
cap=8000

while(qp>0)and(qp<cap):
	qp=qp+(qp*(pc/100))-qr
	mes=mes+1
	if(qp>=cap):
		print("MAXIMO")
	elif(qp<=0):
		print("ZERO")
	else:
		qr = int(input("escreva: "))
		
print(mes)
-- EXECUTION TIME:
0.128949
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
